tests/ui/parser/removed-syntax-uniq-mut-ty.rs
type mut_box = Box<mut isize>;
//~^ ERROR expected one of `>`, a const expression, lifetime, or type, found keyword `mut`
